--- a/todolist2.html
+++ b/todolist2.html
@@ -5,16 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="todolist2.css" />
     <title>ToDoListNew</title>
 </head>
 
 <body>
-    <form action="" id="form1">
-        <input type="text" name="title" id="title" />
-        <input type='submit' value="Submit" />
-    </form>
-    <ul id='liste'>
-    </ul>
+    <article id='forumla'>
+        <h1>Que voulez-vous insérer ?</h1>
+        <form action="" id="form1">
+            <input type="text" name="title" id="title" />
+            <input type='submit' value="Submit" />
+        </form>
+    </article>
+    <article id="listaff">
+        <h2>Liste des éléments insérés</h2>
+        <ul id='liste'>
+        </ul>
+    </article>
     <script type="text/javascript">
         "use strict";
         let todolist = [];
