--- a/todolist2.html
+++ b/todolist2.html
@@ -28,7 +28,7 @@
 
         function rajout(arg) {
             if (todolist.length > 9) {
-                return;
+                return (alert("Tu as atteint le nombre de cadeaux limite :)"));
             }
             todolist.push(arg);
         };
